[package]
name = "libcouchbase-rs"
version = "0.1.0"
authors = ["Jake Rawsthorne <jake.rawsthorne@couchbase.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
thiserror = "1.0.23"
anyhow = "1.0.38"
bytes = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crc32fast = "1.2.1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"
rand = "0.8"